src/antlr4ts/ACLParser.ts
// Generated from ./src/antlr4ts/ACL.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { ACLListener } from "./ACLListener";
import { ACLVisitor } from "./ACLVisitor";


export class ACLParser extends Parser {
	public static readonly CLASS = 1;
	public static readonly COMPONENT = 2;
	public static readonly EXTENSION = 3;
	public static readonly CUTSCENE = 4;
	public static readonly FUNCTION = 5;
	public static readonly COROUTINE = 6;
	public static readonly WHILE = 7;
	public static readonly FOR = 8;
	public static readonly IN = 9;
	public static readonly IF = 10;
	public static readonly ELIF = 11;
	public static readonly ELSE = 12;
	public static readonly WAIT = 13;
	public static readonly RETURN = 14;
	public static readonly BREAK = 15;
	public static readonly CONTINUE = 16;
	public static readonly ID = 17;
	public static readonly PRIVATE = 18;
	public static readonly SELF = 19;
	public static readonly DOT = 20;
	public static readonly ASSIGN = 21;
	public static readonly SEMI = 22;
	public static readonly COMMA = 23;
	public static readonly NUMBER = 24;
	public static readonly FLOAT = 25;
	public static readonly STRING = 26;
	public static readonly BOOL = 27;
	public static readonly NULL = 28;
	public static readonly PLUS = 29;
	public static readonly MINUS = 30;
	public static readonly MULTIPLY = 31;
	public static readonly DIVIDE = 32;
	public static readonly MODULO = 33;
	public static readonly PLUS_ASSIGN = 34;
	public static readonly MINUS_ASSIGN = 35;
	public static readonly MULTIPLY_ASSIGN = 36;
	public static readonly DIVIDE_ASSIGN = 37;
	public static readonly EQUALS = 38;
	public static readonly NOT_EQUALS = 39;
	public static readonly LESS = 40;
	public static readonly LESS_EQUAL = 41;
	public static readonly GREATER = 42;
	public static readonly GREATER_EQUAL = 43;
	public static readonly AND = 44;
	public static readonly OR = 45;
	public static readonly NOT = 46;
	public static readonly LBRACE = 47;
	public static readonly RBRACE = 48;
	public static readonly LPAREN = 49;
	public static readonly RPAREN = 50;
	public static readonly WS = 51;
	public static readonly ANNOTATION_COMMENT = 52;
	public static readonly ANNOTATION_BLOCK_COMMENT = 53;
	public static readonly LINE_COMMENT = 54;
	public static readonly BLOCK_COMMENT = 55;
	public static readonly RULE_program = 0;
	public static readonly RULE_classDecl = 1;
	public static readonly RULE_classBody = 2;
	public static readonly RULE_variableDecl = 3;
	public static readonly RULE_methodDecl = 4;
	public static readonly RULE_paramList = 5;
	public static readonly RULE_param = 6;
	public static readonly RULE_block = 7;
	public static readonly RULE_statement = 8;
	public static readonly RULE_whileLoop = 9;
	public static readonly RULE_forLoop = 10;
	public static readonly RULE_ifStatement = 11;
	public static readonly RULE_elifStatement = 12;
	public static readonly RULE_elseStatement = 13;
	public static readonly RULE_returnStatement = 14;
	public static readonly RULE_waitStatement = 15;
	public static readonly RULE_expression = 16;
	public static readonly RULE_assignmentExpression = 17;
	public static readonly RULE_logicalOrExpression = 18;
	public static readonly RULE_logicalAndExpression = 19;
	public static readonly RULE_equalityExpression = 20;
	public static readonly RULE_relationalExpression = 21;
	public static readonly RULE_additiveExpression = 22;
	public static readonly RULE_multiplicativeExpression = 23;
	public static readonly RULE_unaryExpression = 24;
	public static readonly RULE_postfixExpression = 25;
	public static readonly RULE_postfixOperator = 26;
	public static readonly RULE_methodCall = 27;
	public static readonly RULE_fieldAccess = 28;
	public static readonly RULE_incompleteFieldAccess = 29;
	public static readonly RULE_primaryExpression = 30;
	public static readonly RULE_literal = 31;
	public static readonly RULE_argumentList = 32;
	public static readonly RULE_annotation = 33;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "classDecl", "classBody", "variableDecl", "methodDecl", "paramList", 
		"param", "block", "statement", "whileLoop", "forLoop", "ifStatement", 
		"elifStatement", "elseStatement", "returnStatement", "waitStatement", 
		"expression", "assignmentExpression", "logicalOrExpression", "logicalAndExpression", 
		"equalityExpression", "relationalExpression", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "postfixExpression", "postfixOperator", "methodCall", 
		"fieldAccess", "incompleteFieldAccess", "primaryExpression", "literal", 
		"argumentList", "annotation",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'class'", "'component'", "'extension'", "'cutscene'", "'function'", 
		"'coroutine'", "'while'", "'for'", "'in'", "'if'", "'elif'", "'else'", 
		"'wait'", "'return'", "'break'", "'continue'", undefined, "'_'", "'self'", 
		"'.'", "'='", "';'", "','", undefined, undefined, undefined, undefined, 
		"'null'", "'+'", "'-'", "'*'", "'/'", "'%'", "'+='", "'-='", "'*='", "'/='", 
		"'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", "'{'", 
		"'}'", "'('", "')'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "CLASS", "COMPONENT", "EXTENSION", "CUTSCENE", "FUNCTION", 
		"COROUTINE", "WHILE", "FOR", "IN", "IF", "ELIF", "ELSE", "WAIT", "RETURN", 
		"BREAK", "CONTINUE", "ID", "PRIVATE", "SELF", "DOT", "ASSIGN", "SEMI", 
		"COMMA", "NUMBER", "FLOAT", "STRING", "BOOL", "NULL", "PLUS", "MINUS", 
		"MULTIPLY", "DIVIDE", "MODULO", "PLUS_ASSIGN", "MINUS_ASSIGN", "MULTIPLY_ASSIGN", 
		"DIVIDE_ASSIGN", "EQUALS", "NOT_EQUALS", "LESS", "LESS_EQUAL", "GREATER", 
		"GREATER_EQUAL", "AND", "OR", "NOT", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
		"WS", "ANNOTATION_COMMENT", "ANNOTATION_BLOCK_COMMENT", "LINE_COMMENT", 
		"BLOCK_COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ACLParser._LITERAL_NAMES, ACLParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return ACLParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "ACL.g4"; }

	// @Override
	public get ruleNames(): string[] { return ACLParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return ACLParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ACLParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ACLParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 77;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ACLParser.CLASS) | (1 << ACLParser.COMPONENT) | (1 << ACLParser.EXTENSION) | (1 << ACLParser.CUTSCENE))) !== 0) || _la === ACLParser.ANNOTATION_COMMENT || _la === ACLParser.ANNOTATION_BLOCK_COMMENT) {
				{
				{
				this.state = 71;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ACLParser.ANNOTATION_COMMENT || _la === ACLParser.ANNOTATION_BLOCK_COMMENT) {
					{
					{
					this.state = 68;
					this.annotation();
					}
					}
					this.state = 73;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 74;
				this.classDecl();
				}
				}
				this.state = 79;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classDecl(): ClassDeclContext {
		let _localctx: ClassDeclContext = new ClassDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ACLParser.RULE_classDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 80;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ACLParser.CLASS) | (1 << ACLParser.COMPONENT) | (1 << ACLParser.EXTENSION) | (1 << ACLParser.CUTSCENE))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 81;
			this.match(ACLParser.ID);
			this.state = 82;
			this.match(ACLParser.LBRACE);
			this.state = 83;
			this.classBody();
			this.state = 84;
			this.match(ACLParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classBody(): ClassBodyContext {
		let _localctx: ClassBodyContext = new ClassBodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ACLParser.RULE_classBody);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 90;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ACLParser.FUNCTION) | (1 << ACLParser.COROUTINE) | (1 << ACLParser.ID) | (1 << ACLParser.PRIVATE))) !== 0) || _la === ACLParser.ANNOTATION_COMMENT || _la === ACLParser.ANNOTATION_BLOCK_COMMENT) {
				{
				this.state = 88;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
				case 1:
					{
					this.state = 86;
					this.variableDecl();
					}
					break;

				case 2:
					{
					this.state = 87;
					this.methodDecl();
					}
					break;
				}
				}
				this.state = 92;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variableDecl(): VariableDeclContext {
		let _localctx: VariableDeclContext = new VariableDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ACLParser.RULE_variableDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 96;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ACLParser.ANNOTATION_COMMENT || _la === ACLParser.ANNOTATION_BLOCK_COMMENT) {
				{
				{
				this.state = 93;
				this.annotation();
				}
				}
				this.state = 98;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			{
			this.state = 100;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ACLParser.PRIVATE) {
				{
				this.state = 99;
				this.match(ACLParser.PRIVATE);
				}
			}

			this.state = 102;
			this.match(ACLParser.ID);
			this.state = 103;
			this.match(ACLParser.ASSIGN);
			this.state = 104;
			this.expression();
			}
			this.state = 106;
			this.match(ACLParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public methodDecl(): MethodDeclContext {
		let _localctx: MethodDeclContext = new MethodDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, ACLParser.RULE_methodDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 111;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ACLParser.ANNOTATION_COMMENT || _la === ACLParser.ANNOTATION_BLOCK_COMMENT) {
				{
				{
				this.state = 108;
				this.annotation();
				}
				}
				this.state = 113;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 114;
			_la = this._input.LA(1);
			if (!(_la === ACLParser.FUNCTION || _la === ACLParser.COROUTINE)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 115;
			this.match(ACLParser.ID);
			this.state = 116;
			this.match(ACLParser.LPAREN);
			this.state = 118;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ACLParser.ID || _la === ACLParser.ANNOTATION_COMMENT || _la === ACLParser.ANNOTATION_BLOCK_COMMENT) {
				{
				this.state = 117;
				this.paramList();
				}
			}

			this.state = 120;
			this.match(ACLParser.RPAREN);
			this.state = 121;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public paramList(): ParamListContext {
		let _localctx: ParamListContext = new ParamListContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, ACLParser.RULE_paramList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			this.param();
			this.state = 128;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ACLParser.COMMA) {
				{
				{
				this.state = 124;
				this.match(ACLParser.COMMA);
				this.state = 125;
				this.param();
				}
				}
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public param(): ParamContext {
		let _localctx: ParamContext = new ParamContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, ACLParser.RULE_param);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 134;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ACLParser.ANNOTATION_COMMENT || _la === ACLParser.ANNOTATION_BLOCK_COMMENT) {
				{
				{
				this.state = 131;
				this.annotation();
				}
				}
				this.state = 136;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 137;
			this.match(ACLParser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, ACLParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 139;
			this.match(ACLParser.LBRACE);
			this.state = 143;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ACLParser.WHILE) | (1 << ACLParser.FOR) | (1 << ACLParser.IF) | (1 << ACLParser.WAIT) | (1 << ACLParser.RETURN) | (1 << ACLParser.BREAK) | (1 << ACLParser.CONTINUE) | (1 << ACLParser.ID) | (1 << ACLParser.PRIVATE) | (1 << ACLParser.SELF) | (1 << ACLParser.NUMBER) | (1 << ACLParser.FLOAT) | (1 << ACLParser.STRING) | (1 << ACLParser.BOOL) | (1 << ACLParser.NULL) | (1 << ACLParser.PLUS) | (1 << ACLParser.MINUS))) !== 0) || ((((_la - 46)) & ~0x1F) === 0 && ((1 << (_la - 46)) & ((1 << (ACLParser.NOT - 46)) | (1 << (ACLParser.LBRACE - 46)) | (1 << (ACLParser.LPAREN - 46)) | (1 << (ACLParser.ANNOTATION_COMMENT - 46)) | (1 << (ACLParser.ANNOTATION_BLOCK_COMMENT - 46)))) !== 0)) {
				{
				{
				this.state = 140;
				this.statement();
				}
				}
				this.state = 145;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 146;
			this.match(ACLParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, ACLParser.RULE_statement);
		try {
			this.state = 162;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 148;
				this.variableDecl();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 149;
				this.expression();
				this.state = 150;
				this.match(ACLParser.SEMI);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 152;
				this.ifStatement();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 153;
				this.whileLoop();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 154;
				this.forLoop();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 155;
				this.waitStatement();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 156;
				this.block();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 157;
				this.returnStatement();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 158;
				this.match(ACLParser.BREAK);
				this.state = 159;
				this.match(ACLParser.SEMI);
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 160;
				this.match(ACLParser.CONTINUE);
				this.state = 161;
				this.match(ACLParser.SEMI);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public whileLoop(): WhileLoopContext {
		let _localctx: WhileLoopContext = new WhileLoopContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, ACLParser.RULE_whileLoop);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 164;
			this.match(ACLParser.WHILE);
			this.state = 165;
			this.match(ACLParser.LPAREN);
			this.state = 166;
			this.expression();
			this.state = 167;
			this.match(ACLParser.RPAREN);
			this.state = 168;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public forLoop(): ForLoopContext {
		let _localctx: ForLoopContext = new ForLoopContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, ACLParser.RULE_forLoop);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 170;
			this.match(ACLParser.FOR);
			this.state = 171;
			this.match(ACLParser.LPAREN);
			this.state = 172;
			this.match(ACLParser.ID);
			this.state = 173;
			this.match(ACLParser.IN);
			this.state = 174;
			this.expression();
			this.state = 175;
			this.match(ACLParser.RPAREN);
			this.state = 176;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifStatement(): IfStatementContext {
		let _localctx: IfStatementContext = new IfStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, ACLParser.RULE_ifStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 178;
			this.match(ACLParser.IF);
			this.state = 179;
			this.match(ACLParser.LPAREN);
			this.state = 180;
			this.expression();
			this.state = 181;
			this.match(ACLParser.RPAREN);
			this.state = 182;
			this.block();
			this.state = 186;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ACLParser.ELIF) {
				{
				{
				this.state = 183;
				this.elifStatement();
				}
				}
				this.state = 188;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 190;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ACLParser.ELSE) {
				{
				this.state = 189;
				this.elseStatement();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public elifStatement(): ElifStatementContext {
		let _localctx: ElifStatementContext = new ElifStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, ACLParser.RULE_elifStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 192;
			this.match(ACLParser.ELIF);
			this.state = 193;
			this.match(ACLParser.LPAREN);
			this.state = 194;
			this.expression();
			this.state = 195;
			this.match(ACLParser.RPAREN);
			this.state = 196;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public elseStatement(): ElseStatementContext {
		let _localctx: ElseStatementContext = new ElseStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, ACLParser.RULE_elseStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 198;
			this.match(ACLParser.ELSE);
			this.state = 199;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public returnStatement(): ReturnStatementContext {
		let _localctx: ReturnStatementContext = new ReturnStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, ACLParser.RULE_returnStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 201;
			this.match(ACLParser.RETURN);
			this.state = 203;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ACLParser.ID) | (1 << ACLParser.SELF) | (1 << ACLParser.NUMBER) | (1 << ACLParser.FLOAT) | (1 << ACLParser.STRING) | (1 << ACLParser.BOOL) | (1 << ACLParser.NULL) | (1 << ACLParser.PLUS) | (1 << ACLParser.MINUS))) !== 0) || _la === ACLParser.NOT || _la === ACLParser.LPAREN) {
				{
				this.state = 202;
				this.expression();
				}
			}
